Bug 1248772 - Trigger a OS window focus in ServiceWorkerClients::OpenWindow. r=ehsan